# StockAnalysis

./: .env.development  .gitignore  .replit  README.md  Stock Analysis App Roadmap.md  pyproject.toml  start.sh  stock-analysis.tsx
ValueViewer/: ValueViewer.sln
backend/: app.py  requirements.txt
backend/.ipynb_checkpoints/: app-checkpoint.py
backend/Backend/: Backend.pyproj
backend/Backup/: app.py
frontend/: .gitignore  package.json
frontend/src/: App.js  firebase.js  index.js
frontend/src/components/: CreditCycle.js  Portfolio.js  StockAnalysis.css  StockAnalysis.js
frontend/src/services/: api.js
