[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = "Stock Analysis App"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.1"
flask-cors = "^3.0.10"
python-dotenv = "^0.19.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 